# advanced-ai-intensive

./: .env.example  .gitignore  README.md  requirements.txt
apps/forge/: README.md  pyproject.toml
apps/forge/docs/: turn-flow-walkthrough.md
apps/forge/electron/: README.md  electron.vite.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json
apps/forge/electron/src/main/: index.ts
apps/forge/electron/src/preload/: index.ts
apps/forge/electron/src/renderer/: index.html
apps/forge/electron/src/renderer/src/: App.tsx  index.css  main.tsx
apps/forge/electron/src/renderer/src/components/: Sidebar.tsx  WorkspaceHeader.tsx
apps/forge/electron/src/renderer/src/lib/: api.ts  cn.ts  ws.ts
apps/forge/electron/src/renderer/src/views/: Agents.tsx  Chat.tsx  Eval.tsx  Mcp.tsx  Memory.tsx  Settings.tsx
apps/forge/forge/: __init__.py  cli.py  config.py  mcp.py  memory.py  memory_reflect_agent.py  paths.py  repo_rag.py  server.py  trace.py
apps/forge/forge/agent/: __init__.py  agents_registry.py  compaction.py  delegate.py  engine.py  permissions.py  prompts.py  solo.py  spawn.py  workers.py
apps/forge/forge/eval/: __init__.py  runner.py  thread_eval.py
apps/forge/forge/eval/golds/: forge_tasks.jsonl
apps/forge/forge/tui/: __init__.py  app.py  styles.tcss
apps/forge/mcp_servers/: _common.py  code_server.py  fs_server.py  git_server.py  repo_rag_server.py  shell_server.py
apps/forge/tests/: conftest.py  test_mcp_install.py  test_thread_eval.py  test_workspace_endpoint.py  test_ws_permission.py
notebooks/: README.md  _path_setup.py  (+19 more)
(+137 files in other folders)
